feat: Implement refeshToken for JWT authentication
