# backend/src/routes/auth-routes.ts
@@ -1,7 +1,7 @@
 import { Router } from 'express';
 import AuthController from '../controllers/auth-controller';
 import { validateData } from '../middlewares/validation-middleware';
-import { registerSchema } from '../schemas/auth-schemas';
+import { refreshSchema, registerSchema } from '../schemas/auth-schemas';
 
 const authRoutes = Router();
 
@@ -10,6 +10,11 @@ authRoutes.post(
   '/register',
   validateData(registerSchema),
   AuthController.register
+);
+authRoutes.post(
+  '/refresh',
+  validateData(refreshSchema),
+  AuthController.refresh
 );
 
 export default authRoutes;
